# shader-gallery

./: .gitignore  Cargo.toml  index.html  shader-gallery-a4b424c68e745fae.js
.cargo/: config.toml
.github/workflows/: ci.yaml
assets/shaders/: custom.wgsl
src/: environment.rs  main.rs  paintings.rs  shader.rs
src/paintings/: simple.rs
