[package]
name = "hall-of-shaders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.9"
default-features = false
features = [
  "dynamic",
  "bevy_asset",
  "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_gltf",
  "bevy_render",
  "png",
  "jpeg"
]

[dependencies]
smooth-bevy-cameras = "0.7"
bevy-inspector-egui = "0.17"
bevy_mod_fbx = "0.3"
take_mut = "0.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
